[tool.isort]
profile = "black"


[tool.poetry]
name = "expanse"
version = "0.1.0"
description = "Expanse RPG app"
authors = ["Paul Hallett <paulandrewhallett@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11.2"
Flask = "^2.2.3"
Jinja2 = "^3.1.2"
mypy = "^1.1.1"
click = "^8.1.3"
isort = "^5.12.0"
black = "^23.3.0"
structlog = "^22.3.0"
ruff = "^0.0.267"
pydantic = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
